# ledger-pyreport

./: .gitignore  Dockerfile  MANIFEST.in  README.md  config.example.yml  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  build-latest.yml  build-tag.yml  build.yml  lint.yml
demo/: config.yml  ext_pending.py  ledger.journal
ledger_pyreport/: __init__.py  accounting.py  config.py  ledger.py  model.py
ledger_pyreport/jinja2/: balance.html  base.html  base_report.html  cashflow_direct.html  cashflow_indirect.html  debug_noncash_transactions.html  index.html  pandl.html  transaction.html  transaction_commodity.html  transactions.html  transactions_commodity.html  trial.html  trial_multiple.html
ledger_pyreport/static/: copyAmounts.js  main.css  print.css  toasts.js
