[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger_pyreport"
version = "0.1.4"
description = "Webapp for generating interactive and printable accounting reports from ledger-cli"
readme = "README.md"
authors = [
    {name = "Lee Yingtong", email = "blog@yingtongli.me"},
    {name = "Richard Bullington-McGuire", email = "richard.bullington.mcguire@gmail.com"},
]
maintainers = [
    {name = "Richard Bullington-McGuire", email="richard.bullington.mcguire@gmail.com"},
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3'
]
dependencies = [
    "Flask==3.1.0",
    "PyYAML==6.0.2",
    "markupsafe==3.0.2",
]

[optional.dependencies]
dev = [
  "FawltyDeps",
  "uppd",
  "ruff",
]

[tool.setuptools.packages.find]
exclude = ["demo"]

# Thanks https://stackoverflow.com/a/76435649/424301 for the tip
[tool.setuptools.package-data]
mypkg = ["*.css", "*.html", "*.css"]

[tool.fawltydeps]
ignore_unused = [
    "FawltyDeps",
    "uppd",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
